new file:   chamber/images/weather-placeholder.svg 	modified:   chamber/index.html 	modified:   chamber/styles/home.css

--- a/chamber/styles/home.css
+++ b/chamber/styles/home.css
@@ -1,6 +1,17 @@
 /* Styles for the Home Page (index.html) */
 
 /* Hero Section */
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
+
 .hero-section {
     position: relative;
     width: 100%;
