modified:   chamber/styles/discover.css

--- a/chamber/styles/discover.css
+++ b/chamber/styles/discover.css
@@ -85,7 +85,7 @@
 }
 
 .discover-card .btn-secondary:hover {
-    background-color: #218838;
+    background-color: rgb(7 112 30);
 }
 
 /* --- Responsive Grid Layouts --- */
