--- a/chamber/styles/discover.css
+++ b/chamber/styles/discover.css
@@ -77,7 +77,7 @@
 .discover-card .btn-secondary {
     display: inline-block;
     padding: 10px 20px;
-    background-color: var(--secondary-color);
+    background-color: rgb(9, 82, 9);
     color: var(--light-text-color);
     text-decoration: none;
     border-radius: 5px;
@@ -85,7 +85,7 @@
 }
 
 .discover-card .btn-secondary:hover {
-    background-color: rgb(7 112 30);
+    background-color: rgb(2, 105, 26);
 }
 
 /* --- Responsive Grid Layouts --- */
