modified:   styles/final.css

--- a/styles/final.css
+++ b/styles/final.css
@@ -37,6 +37,10 @@ img {
     display: block;
 }
 
+.main-header {
+    text-align: center;
+}
+
 /* =========================
     HEADER
 ========================= */
